Fix paragraph spacing in posts and spacing in footer

--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -197,6 +197,8 @@ li
     margin-bottom: 20px
   li
     list-style-type: square
+  p
+    margin-bottom: 1em
 
 #footer
   clear: both
